Update tailwind.config.js and package.json

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Bukazu Portal</title>
-    <!-- <link href="./dist/style.css" rel="stylesheet"> -->
+    <link href="./src/output.css" rel="stylesheet">
   </head>
   <body>
     <h1>Bukazu Test Portal</h1>
 
-    <div class="bukazu-app" id="bukazu-app" portal-code="7f9b7a84" language='nl'></div>
+    <div class="bukazu-app" id="bukazu-app" portal-code="7f2614bc   " language='nl'></div>
 
     <script src="./dev.tsx" type="module"></script>
   </body>
