--- a/calendar.html
+++ b/calendar.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Bukazu Portal</title>
+    <link href="./src/output.css" rel="stylesheet">
   </head>
   <body>
     <h1>Bukazu Test Calendar</h1>
     <!-- <div class="bukazu-app" id="bukazu-app" portal-code="050497a0" object-code="DE0002" language='nl' filters='123'></div> -->
     <!-- <div class="bukazu-app" id="bukazu-app" portal-code="2b063dcd" object-code="AT0047" language='nl' filters='123'></div>     -->
-    <div class="bukazu-app" id="bukazu-app" portal-code="2b063dcd" object-code="AT0047" language='de' filters='123'></div>    
+    <div class="bukazu-app" id="bukazu-app" portal-code="44420a02" object-code="ES0124" language='nl'></div>    
     <!-- <div id='bukazu-app' class='bukazu-app' portal-code="51b07a78" object-code="NL1286" language="nl"></div> -->
 
     <script src="./dev.tsx" type="module"></script>
